--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ h1 {color:white}
 <center><p><h1>Waehle dein Schicksal<br><br>Du Haenger</h1></p></center>
 </head>
 <body>
-<br><br><br><br><br><br><br><br><br><br><br><br><a href="Anti Goon.html"><img src="assets\istockphoto-1162439646-612x612.jpg"></a>
-<br><br><br><br><br><br><br><br><br><br><br><br><a href="Goon.html"><img src="assets\b8c6e8130e5374f4e5fdc903feaad917814bd58caef6a8d9a2c48f20b983bc33.jpg" style="float: right; height: 50%; width: 26%; position: relative; position: absolute; top: 350px; position: absolute; right: 0px"></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><a href="anti-goon.html"><img src="assets\istockphoto-1162439646-612x612.jpg"></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><a href="goon.html"><img src="assets\b8c6e8130e5374f4e5fdc903feaad917814bd58caef6a8d9a2c48f20b983bc33.jpg" style="float: right; height: 50%; width: 26%; position: relative; position: absolute; top: 350px; position: absolute; right: 0px"></a>
 </body>
 </html>
