fix: fixed linking

--- a/anti-goon.html
+++ b/anti-goon.html
@@ -53,7 +53,7 @@
         <center><li><strong>Verbrennt deinen Dödel</strong></li></center> 
         <center></ul></center>
         <center><p><h3>Hoffentlich hat euch mein gooner ranking gefallen!<br>Bevor ihr geht habe noch eine letzte Frage<br></h3></p><h1><a href="https://de.wiktionary.org/wiki/G%C3%B6ffel">Wisst ihr was ein Göffel ist?</a></h1><br></center>
-        <h1><a href="Wähle.html" style="position: relative; position: absolute; right: 0px;">Hier geht's zur coolen Seite</a></h1>
+        <h1><a href="index.html" style="position: relative; position: absolute; right: 0px;">Hier geht's zur coolen Seite</a></h1>
         <h1><a href="Goon.html">Hier geht's zum guten gooning ranking</a></h1>
 </body>
 </html>
